--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/styles.css">
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+
 		<title>
 Joshua Abreu: Personal Portfolio
 </title>
@@ -16,7 +21,7 @@ Joshua Abreu: Personal Portfolio
 <body>
 
 	<header>
-	<span class="tab-desk">	<h1> Joshua Abreu </h1> </span>
+	<p> Joshua Abreu <p>
 	</header>
 
 	<nav>
@@ -31,11 +36,8 @@ Joshua Abreu: Personal Portfolio
 
 <main>
 	<!-- Hero Image -->
-<div class = "tab-desk">
- <div id="hero">
- <img src="images/graduation.jpg" alt="Graduation: 2021" width="400" height="600>
- </div>
-</div>
+
+
 
 	<!-- Use the main area to add the main content to the webpage -->
 	<main>
@@ -45,8 +47,10 @@ Joshua Abreu: Personal Portfolio
 
     <p>Hey, im Joshua Abreu:</p>
 
-      <p>A motivated student in college completing my Computer Science Degree :)</p>
+      <p>A motivated student in college completing my Computer Science Degree. </p>
 
+
+			<button class="button button1"><a href="work.html">See my work.</a></button>
       </div>
 
 	</main>
