--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@ Joshua Abreu: Personal Portfolio
 
 	<footer>
     <p>Made by me :)</p>
-<p> <a href= "mailto: joshuaabreu16@gmail.com"> Joshuaabreu16@gmail.com </a> </p>
+<p> <a href= "mailto: joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
 	</footer>
 
 </body>
