--- a/index.html
+++ b/index.html
@@ -42,22 +42,20 @@ Joshua Abreu: Personal Portfolio
 	<!-- Use the main area to add the main content to the webpage -->
 	<main>
 
-    <div id="intro">
 
-
-    <p>Hey, im Joshua Abreu:</p>
+    <h2>Hey, im Joshua Abreu:</h2>
 
       <p>A motivated student in college completing my Computer Science Degree. </p>
 
 
 			<button class="button button1"><a href="work.html">See my work.</a></button>
-      </div>
+
 
 	</main>
 
 	<footer>
     <p>Made by me :)</p>
-<p> <a href= "mailto: joshuaabreu16@gmail.com"> Joshuaabreu16@gmail.com </a> </p>
+<p> <a href= "mailto: joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
 	</footer>
 
 </body>
