--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ Joshua Abreu: Personal Portfolio
 <body>
 
 	<header>
-	<p> Joshua Abreu <p>
+	<h4> Joshua Abreu </h4>
 	</header>
 
 	<nav>
@@ -47,9 +47,12 @@ Joshua Abreu: Personal Portfolio
   </div>
   <div class="column">
     <h1> About Me </h1>
-    <p>shlaflkasdjfkalsdjflakjflkasdjlfjasldkfjklads </p>
+    <p>Other than sitting in front of a moniter, other activites I like to do in my freetime include playing sports such as basketball and
+    football. Some of my favorite shows are Breaking Bad and Game of Thrones, and I can also play the piano.  </p>
 
-    <button class="button button1"><a href="work.html">Social Media</a></button>
+    <p> If you would like, you can follow me on my instagram below. </p>
+
+    <button class="button button1"><a href="https://www.instagram.com/jsh.abreu/">Follow me on Insta</a></button>
   </div>
   </div>
 
