--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Joshua Abreu: Personal Portfolio
 <body>
 
 	<header>
-	<p> Joshua Abreu <p>
+	<h4> Joshua Abreu </h4>
 	</header>
 
 	<nav>
@@ -43,12 +43,12 @@ Joshua Abreu: Personal Portfolio
 	<main>
 
 
-    <h2>Hey, im Joshua Abreu:</h2>
+    <h2>Hey, Im Joshua Abreu:</h2>
 
-      <p>A motivated student in college completing my Computer Science Degree. </p>
+      <p>A motivated and enthusiastic student in college completing my Computer Science Degree. </p>
 
 
-			<button class="button button1"><a href="work.html">See my work.</a></button>
+			<button class="button button1"><a href="about.html">Continue</a></button>
 
 
 	</main>
