--- a/work.html
+++ b/work.html
@@ -34,16 +34,17 @@ Joshua Abreu: Personal Portfolio
 		</ul>
 	</nav>
 
-<main>
+
 
 
 
 	<!-- Use the main area to add the main content to the webpage -->
 	<main>
 
+<h1> Previous Jobs </h1>
     <div class="row">
   <div class="column">
-    <h1> Day Camp </h1>
+    <h2> Day Camp </h2>
     <p> This was a position in which I held many responsibilities. I was tasked with keeping the grounds clean, as well as
     helping to make and serve food to young kids at a camp. In the later parts of the day, I would also help to set up activities
      for the kids to play and participate in.
@@ -60,7 +61,7 @@ Joshua Abreu: Personal Portfolio
 
 <div class="row">
   <div class="column">
-    <h1> Hebrew Day School </h1>
+    <h2> Hebrew Day School </h2>
     <p> During this time, I was equiped with the task of driving around in delivery trucks and dropping off boxes of food for the Hasidic Jewish camps.
     We often also were tasked with packing the boxes, loading them up in the trucks, and sometimes dealing with customer service.   </p>
 
@@ -72,9 +73,7 @@ Joshua Abreu: Personal Portfolio
   </div>
 
 
-<div class= "row"
-    <p> dasf </p>
-</div>
+
 
 
 
