--- a/career.html
+++ b/career.html
@@ -34,60 +34,76 @@ Joshua Abreu: Personal Portfolio
 		</ul>
 	</nav>
 
-<main>
+
 
 
 
 	<!-- Use the main area to add the main content to the webpage -->
 	<main>
 
-    <div class="row">
-  <div class="column">
-    <h1> About Me </h1>
-    <p>Other than sitting in front of a moniter, other activites I like to do in my freetime include playing sports such as basketball and
-    football. My favorite show is Breaking Bad, and my favorite movie series is the original star wars trilogy.  </p>
-
-    <p> If you would like, you can follow me on my instagram below. </p>
-  </div>
-  <div class="column">
-
-<p> year: 2019-2020</p>
 
 
-  </div>
-  </div>
+
+
+
+    <h1>Career</h1>
+		<p> The table below includes my previous/ current education.  </p>
+
+      <table>
+        <tr><!-- Row 1 -->
+          <th>School</th>
+          <th>GPA</th>
+          <th>Year Taken</th>
+        </tr>
+
+        <tr><!-- Row 2 -->
+        <td>Liberty Highschool </td>
+         <td>GPA 3.7, 14th in the class</td>
+         <td>2017-2021</td>
+        </tr>
+
+        <tr><!-- Row 3 -->
+        <td>SUNY Sullivan / CS</td>
+         <td> GPA 3.4 (Currently) </td>
+         <td> 2021-2023</td>
+        </tr>
+
+        <tr><!-- Row 4 -->
+        <td> ... </td>
+         <td> ... </td>
+         <td> ... </td>
+        </tr>
+
+
+
+      </table>
+
+<br>
+
+
+<h1>  Recent Projects</h1>
+
+
 
 <div class="row">
-  <div class="column">
-    <h1> Hebrew Day School </h1>
-    <p> During this   </p>
+<div class="column">
+<img src="images/Game menu.png" alt="Forest" style="width:100%">
+</div>
+<div class="column">
+<h2> Game Menu </h2>
+<p> Here you can see a simple project I made in one of my classes where I made a Rock Paper Scissors game, as well as a
+	more complex game of RPS. The players have the option to choose either game in a menu.
+	The program also includes things such as a score tracker, and an option to end the game. I coded this program in C++.   </p>
 
-    <p> If you would like, you can follow me on my instagram below. </p>
-  </div>
-  <div class="column">
-<p> year: 2019-2020</p>
-</div
+<p> Click the button to check it out. </p>
 
-  </div>
-
-
-  <div class="row">
-    <div class="column">
-      <h1> About Me </h1>
-      <p>Other than sitting in front of a moniter, other activites I like to do in my freetime include playing sports such as basketball and
-      football. My favorite show is Breaking Bad, and my favorite movie series is the original star wars trilogy.  </p>
-
-      <p> If you would like, you can follow me on my instagram below. </p>
-    </div>
-    <div class="column">
-  <p> year: 2019-2020</p>
-  </div
-
-    </div>
-
-
+<button class="button button1"><a href="https://replit.com/@JoshSauce/Game-Menu#main.cpp">Replit Link</a></button>
+</div>
+</div>
 
 	</main>
+
+
 
 	<footer>
     <p>Made by me :)</p>
