--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@ Joshua Abreu: Personal Portfolio
 
 	<!-- Use the main area to add the main content to the webpage -->
 	<main>
-
+		<div id = "contact">
 <h1> Previous Jobs </h1>
     <div class="row">
   <div class="column">
