--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@ Joshua Abreu: Personal Portfolio
 </title>
 </head>
 <body>
-
+	<div class = "tab-desk">
 	<header>
-	<h4> Joshua Abreu </h4>
-	</header>
 
+	<span class="tab-desk">	<h4> Joshua Abreu </h4> </span>
+
+	</header>
+</div>
 	<nav>
     <ul>
 		<li>	<a href="index.html">Home Page</a>  </li>
@@ -34,8 +36,6 @@ Joshua Abreu: Personal Portfolio
 		</ul>
 	</nav>
 
-
-	<!-- Hero Image -->
 
 
 
@@ -48,7 +48,7 @@ Joshua Abreu: Personal Portfolio
       <p>A motivated and enthusiastic student in college completing my Computer Science Degree. </p>
 
 
-			<button class="button button1"><a href="about.html">Continue</a></button>
+			<button class="button button1"> <a href="about.html">Continue</a></button>
 
 
 	</main>
