--- a/career.html
+++ b/career.html
@@ -8,6 +8,7 @@
 
 <head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/styles.css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,11 +20,11 @@ Joshua Abreu: Personal Portfolio
 </title>
 </head>
 <body>
-
+<div class = "tab-desk">
 	<header>
 	<h4> Joshua Abreu </h4>
 	</header>
-
+</div>
 	<nav>
     <ul>
 		<li>	<a href="index.html">Home Page</a>  </li>
