--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 
 <head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/styles.css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,9 +21,11 @@ Joshua Abreu: Personal Portfolio
 </head>
 <body>
 
+<div class = "tab-desk">
 	<header>
 	<h4> Joshua Abreu </h4>
 	</header>
+</div>
 
 	<nav>
     <ul>
@@ -53,7 +56,7 @@ Joshua Abreu: Personal Portfolio
 
 <div id = "contact">
 
-	
+
 	<form class="form-grid"><!-- Start Form -->
  <fieldset>
 	 <legend> Customer Information </legend>
