--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/styles.css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,6 +27,8 @@ Joshua Abreu: Personal Portfolio
 
 	</header>
 </div>
+
+
 	<nav>
     <ul>
 		<li>	<a href="index.html">Home Page</a>  </li>
