--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@ Joshua Abreu: Personal Portfolio
   </div>
   <div class="column">
     <h1> About Me </h1>
-    <p>Other than sitting in front of a moniter, other activites I like to do in my freetime include playing sports such as basketball and
-    football. Some of my favorite shows are Breaking Bad and Game of Thrones, and I can also play the piano.  </p>
+    <p>Other than sitting in front of a moniter, activites I like to do in my freetime include playing sports such as basketball.
+			 Some of my favorite shows include Breaking Bad and Game of Thrones, and I can also play the piano.  </p>
 
     <p> If you would like, you can follow me on my instagram below. </p>
 
