--- a/about.html
+++ b/about.html
@@ -44,14 +44,14 @@ Joshua Abreu: Personal Portfolio
 
     <div class="row">
   <div class="column">
-  <img src="images/graduation.jpg" alt="Forest" style="width:100%">
+  <img src="images/graduation.jpg" alt="graduation" style="width:100%">
   </div>
   <div class="column">
     <h1> About Me </h1>
     <p>Other than sitting in front of a moniter, activites I like to do in my freetime include playing sports such as basketball.
 			 Some of my favorite shows include Breaking Bad and Game of Thrones, and I can also play the piano.  </p>
 
-    <p> If you would like, you can follow me on my instagram below. </p>
+    <p> If you would like, you can follow me on my personal instagram below. </p>
 
     <button class="button button1"><a href="https://www.instagram.com/jsh.abreu/">Follow me on Insta</a></button>
   </div>
