--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@ Joshua Abreu: Personal Portfolio
 
     <h2>Lets work together</h2>
 		<p>  If you'd like to talk about a project you want help with or have
-      any questions, <br> just drop me a message at joshuaabreu16@gmail.
+      any questions,  just drop me a message at joshuaabreu16@gmail.
       Or you can fill out the form below!  </p>
 
 <div id = "contact">
@@ -59,7 +59,7 @@ Joshua Abreu: Personal Portfolio
 
 	<form class="form-grid"><!-- Start Form -->
  <fieldset>
-	 <legend> Customer Information </legend>
+	 <legend> Information </legend>
 	 <label for="fName">First Name:</label>
  <input type="text" name="fName" id="fName">
  <label for="lName">Last Name:</label>
