--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Joshua Abreu: Personal Portfolio
 
 
 
-
+<div class = "pm">
 	<!-- Use the main area to add the main content to the webpage -->
 	<main>
 
@@ -55,6 +55,7 @@ Joshua Abreu: Personal Portfolio
 
 
 	</main>
+</div>
 
 	<footer>
     <p>Made by me :)</p>
