--- a/about.html
+++ b/about.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 
-	<!-- Student Name: Joshua Abreu
-	File Name: Chapter 2 Lab
-	Date: 2/15/2022 -->
 
 <html lang="en">
 
@@ -22,7 +19,7 @@ Joshua Abreu: Personal Portfolio
 <body>
 <div class = "tab-desk">
 	<header>
-	<h4> Joshua Abreu </h4>
+	<span class="tab-desk">	<img src="images/logo.png" alt="graduation" class="center"> </span>
 	</header>
 </div>
 	<nav>
@@ -39,7 +36,7 @@ Joshua Abreu: Personal Portfolio
 
 
 
-	<!-- Use the main area to add the main content to the webpage -->
+
 	<main>
 
     <div class="row">
@@ -53,7 +50,7 @@ Joshua Abreu: Personal Portfolio
 
     <p> If you would like, you can follow me on my personal instagram below. </p>
 
-    <button class="button button1"><a href="https://www.instagram.com/jsh.abreu/">Follow me on Insta</a></button>
+    <button class="button button1"> <a href="https://www.instagram.com/jsh.abreu/">Follow me on Insta</a> </button>
   </div>
   </div>
 
@@ -61,7 +58,7 @@ Joshua Abreu: Personal Portfolio
 
 	<footer>
     <p>Made by me :)</p>
-<p> <a href= "mailto: joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
+<p> <a href="mailto:joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
 	</footer>
 
 </body>
