--- a/career.html
+++ b/career.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 
-	<!-- Student Name: Joshua Abreu
-	File Name: Chapter 2 Lab
-	Date: 2/15/2022 -->
 
 <html lang="en">
 
@@ -22,7 +19,7 @@ Joshua Abreu: Personal Portfolio
 <body>
 <div class = "tab-desk">
 	<header>
-	<h4> Joshua Abreu </h4>
+<span class="tab-desk">	<img src="images/logo.png" alt="graduation" class="center"> </span>
 	</header>
 </div>
 	<nav>
@@ -39,7 +36,7 @@ Joshua Abreu: Personal Portfolio
 
 
 
-	<!-- Use the main area to add the main content to the webpage -->
+
 	<main>
 
 
@@ -47,7 +44,7 @@ Joshua Abreu: Personal Portfolio
 
 
 
-    <h1>Career</h2>
+    <h1>Career</h1>
 		<p> The table below includes my previous/ current education.  </p>
 
       <table>
@@ -88,7 +85,7 @@ Joshua Abreu: Personal Portfolio
 
 <div class="row">
 <div class="column">
-<img src="images/Game menu.png" alt="Forest" style="width:100%">
+<img src="images/Game menu.png" alt="Game menu" style="width:100%">
 </div>
 <div class="column">
 <h2> Game Menu </h2>
@@ -108,7 +105,7 @@ Joshua Abreu: Personal Portfolio
 
 	<footer>
     <p>Made by me :)</p>
-<p> <a href= "mailto: joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
+<p> <a href= "mailto:joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
 	</footer>
 
 </body>
