--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 
-	<!-- Student Name: Joshua Abreu
-	File Name: Chapter 2 Lab
-	Date: 2/15/2022 -->
+
 
 <html lang="en">
 
@@ -23,7 +21,7 @@ Joshua Abreu: Personal Portfolio
 
 <div class = "tab-desk">
 	<header>
-	<h4> Joshua Abreu </h4>
+	<span class="tab-desk">	<img src="images/logo.png" alt="graduation" class="center"> </span>
 	</header>
 </div>
 
@@ -41,7 +39,7 @@ Joshua Abreu: Personal Portfolio
 
 
 
-	<!-- Use the main area to add the main content to the webpage -->
+
 	<main>
 
 
@@ -54,7 +52,7 @@ Joshua Abreu: Personal Portfolio
       any questions,  just drop me a message at joshuaabreu16@gmail.
       Or you can fill out the form below!  </p>
 
-<div id = "contact">
+</div>
 
 
 	<form class="form-grid"><!-- Start Form -->
@@ -70,7 +68,7 @@ Joshua Abreu: Personal Portfolio
  <input type="tel" id="phone" name="phone">
  </fieldset>
 
-
+</form>
 <input type="submit"
  id="submit"
  value="Submit"
@@ -79,12 +77,9 @@ Joshua Abreu: Personal Portfolio
 
 
 	</main>
-
-
-
 	<footer>
     <p>Made by me :)</p>
-<p> <a href= "mailto: joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
+<p> <a href= "mailto:joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
 	</footer>
 
 </body>
