--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 
-	<!-- Student Name: Joshua Abreu
-	File Name: Chapter 2 Lab
-	Date: 2/15/2022 -->
 
 <html lang="en">
 
@@ -12,7 +9,10 @@
 		<link rel="stylesheet" href="css/styles.css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
+
+
 
 
 		<title>
@@ -23,7 +23,7 @@ Joshua Abreu: Personal Portfolio
 	<div class = "tab-desk">
 	<header>
 
-	<span class="tab-desk">	<h4> Joshua Abreu </h4> </span>
+	<span class="tab-desk">	<img src="images/logo.png" alt="graduation" class="center"> </span>
 
 	</header>
 </div>
@@ -42,7 +42,7 @@ Joshua Abreu: Personal Portfolio
 
 
 <div class = "pm">
-	<!-- Use the main area to add the main content to the webpage -->
+
 	<main>
 
 
@@ -59,7 +59,7 @@ Joshua Abreu: Personal Portfolio
 
 	<footer>
     <p>Made by me :)</p>
-<p> <a href= "mailto: joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
+<p> <a href= "mailto:joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
 	</footer>
 
 </body>
