--- a/work.html
+++ b/work.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 
-	<!-- Student Name: Joshua Abreu
-	File Name: Chapter 2 Lab
-	Date: 2/15/2022 -->
-
 <html lang="en">
 
 <head>
@@ -23,7 +19,7 @@ Joshua Abreu: Personal Portfolio
 
 <div class = "tab-desk">
 	<header>
-	<h4> Joshua Abreu </h4>
+<span class="tab-desk">	<img src="images/logo.png" alt="graduation" class="center"> </span>
 	</header>
 </div>
 
@@ -41,9 +37,8 @@ Joshua Abreu: Personal Portfolio
 
 
 
-	<!-- Use the main area to add the main content to the webpage -->
+
 	<main>
-		<div id = "contact">
 <h1> Previous Jobs </h1>
     <div class="row">
   <div class="column">
@@ -71,21 +66,13 @@ Joshua Abreu: Personal Portfolio
   </div>
   <div class="column">
 <p> year: Summer 2021</p>
-</div
-
-  </div>
-
-
-
-
-
-
+</div>
+</div>
 
 	</main>
-
 	<footer>
     <p>Made by me :)</p>
-<p> <a href= "mailto: joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
+<p> <a href= "mailto:joshuaabreu16@gmail.com"> Email: Joshuaabreu16@gmail.com </a> </p>
 	</footer>
 
 </body>
