--- a/career.html
+++ b/career.html
@@ -19,7 +19,7 @@ Joshua Abreu: Personal Portfolio
 <body>
 <div class = "tab-desk">
 	<header>
-<span class="tab-desk">	<img src="images/logo.png" alt="graduation" class="center"> </span>
+
 	</header>
 </div>
 	<nav>
@@ -92,6 +92,21 @@ Joshua Abreu: Personal Portfolio
 <p> Here you can see a simple project I made in one of my classes where I made a Rock Paper Scissors game, as well as a
 	more complex game of RPS. The players have the option to choose either game in a menu.
 	The program also includes things such as a score tracker, and an option to end the game. I coded this program in C++.   </p>
+
+<p> Click the button to check it out. </p>
+
+<button class="button button1"><a href="https://replit.com/@JoshSauce/Game-Menu#main.cpp">Replit Link</a></button>
+</div>
+</div>
+
+<div class="row">
+<div class="column">
+<img src="images/wild rescues .png" alt="Game menu" style="width:100%">
+</div>
+<div class="column">
+<h2> Company Websites </h2>
+<p>This was a set of two mock websites I created for companies to use for their personal use. I coded these website using HTML, CSS, and
+a little bit of javascript.    </p>
 
 <p> Click the button to check it out. </p>
 
