--- a/career.html
+++ b/career.html
@@ -108,9 +108,9 @@ Joshua Abreu: Personal Portfolio
 <p>This was a set of two mock websites I created for companies to use for their personal use. I coded these website using HTML, CSS, and
 a little bit of javascript.    </p>
 
-<p> Click the button to check it out. </p>
+<p> Click either button to check bpth of them out. </p>
 
-<button class="button button1"><a href="https://replit.com/@JoshSauce/Game-Menu#main.cpp">Replit Link</a></button>
+<button class="button button1"><a href="https://joshsauce1.github.io/Company_Eb/index.html">Website Link</a></button>
 </div>
 </div>
 
