--- a/career.html
+++ b/career.html
@@ -108,9 +108,11 @@ Joshua Abreu: Personal Portfolio
 <p>This was a set of two mock websites I created for companies to use for their personal use. I coded these website using HTML, CSS, and
 a little bit of javascript.    </p>
 
-<p> Click either button to check bpth of them out. </p>
+<p> Click either button to see them. </p>
 
-<button class="button button1"><a href="https://joshsauce1.github.io/Company_Eb/index.html">Website Link</a></button>
+<button class="button button1"><a href="https://joshsauce1.github.io/Company_Eb/index.html">Wild Rescues</a></button>
+
+<button class="button button1"><a href="https://joshsauce1.github.io/Music_Web/">Strike a Chord</a></button>
 </div>
 </div>
 
